WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181471
[GStreamer] REGRESSION(
r226629
): broke media/video-interruption-with-resume-allowing-play.html
https://bugs.webkit.org/show_bug.cgi?id=181471
Summary
[GStreamer] REGRESSION(r226629): broke media/video-interruption-with-resume-a...
Philippe Normand
Reported
2018-01-10 02:12:35 PST
+++ This bug was initially created as a clone of
Bug #181432
+++ Test now times out. Investigating and updating expectations meanwhile...
Attachments
Patch
(7.49 KB, patch)
2018-01-10 06:47 PST
,
Philippe Normand
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-01-10 02:13:30 PST
<
rdar://problem/36402323
>
Philippe Normand
Comment 2
2018-01-10 06:47:44 PST
Created
attachment 330900
[details]
Patch
Philippe Normand
Comment 3
2018-01-10 07:34:29 PST
Committed
r226712
: <
https://trac.webkit.org/changeset/226712
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug