[GStreamer] REGRESSION(r226629): broke media/video-interruption-with-resume-allowing-play.html https://bugs.webkit.org/show_bug.cgi?id=181471 <rdar://problem/36402323>

Reviewed by Carlos Garcia Campos.

Source/WebCore:

This patch mainly reduces the amount of playback state changes
emitted by the GStreamer player to its client. Emitting those
notifications too often has bad side effects.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::paused const): Add debug messages.
(WebCore::MediaPlayerPrivateGStreamer::handleMessage): This debug message appears too much. Demote.
(WebCore::MediaPlayerPrivateGStreamer::maxTimeLoaded const): Ditto.
(WebCore::MediaPlayerPrivateGStreamer::didLoadingProgress const): Ditto.
(WebCore::MediaPlayerPrivateGStreamer::updateStates): Try to emit
playback state change notification only when going to PLAYING.
(WebCore::MediaPlayerPrivateGStreamer::loadingFailed): Add warning message.

LayoutTests:

* platform/gtk/TestExpectations: These 2 tests shall pass now.

Canonical link: https://commits.webkit.org/197337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226712 268f45cc-cd09-0410-ab3c-d52691b4dbfc